--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "example_user",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "joi": "^17.3.0",
